--- a/shelf/templates/base_generic.html
+++ b/shelf/templates/base_generic.html
@@ -4,24 +4,22 @@
     {% block title %}<title>Freeshelf</title>{% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <!-- Add additional CSS in static file -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
     <div >
         <div class="nav-wrapper">
-            <div>
+            <div class="topnav">
                 {% block topnav %}
-                <ul class="top-nav">
+                <ul>
                     <li><a href="{% url 'index' %}">Freeshelf</a></li>
                 </ul>
                 {% endblock %}
             </div>
-            <div>
+            <div class="catnav">
                 {% block catnav %}
-                <ul class="cat-nav">
+                <ul>
                     <li>Books by category:</li>
                     {% for category in category_list %}
                     <li><a href='{{ category.get_absolute_url }}'>{{ category.name }}</a></li>
