--- a/shelf/templates/base_generic.html
+++ b/shelf/templates/base_generic.html
@@ -20,7 +20,7 @@
             <div class="catnav">
                 {% block catnav %}
                 <ul>
-                    <li>Books by category:</li>
+                    <li class="booksby">Books by category:</li>
                     {% for category in category_list %}
                     <li><a href='{{ category.get_absolute_url }}'>{{ category.name }}</a></li>
                     {% endfor %}
