--- a/shelf/static/css/styles.css
+++ b/shelf/static/css/styles.css
@@ -5,18 +5,30 @@
     font-family: DejaVu Sans Mono, monospace;
 }
 
-.topnav{
+.topnav {
     list-style-type: none;
     margin: 0;
-    padding-top: 10px; 
-    height: 50px; 
-    font-size: 20px;
-    background-color: gray;
+    height: auto;
+    min-height: 45px; 
+    font-size: 15px;
+    background-color:#484848;
     color: white;
-    padding-left: 30px;
-    padding-right: 30px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
+.col-sm-10 a:visited {
+    color: blue;
+}
+
+..col-sm-10 {
+    list-style-type: none;
+}
+
+
+.icon {
+    padding-bottom: 100px;
+}
 .topnav li{
     display: inline;
 }
@@ -37,7 +49,7 @@ body {
     padding: 0;  
     padding-top: 15px; 
     height: auto; 
-    font-size: 20px; 
+    font-size: 15px; 
     padding-left: 30px; 
     padding-right: 30px;
 }
@@ -52,7 +64,7 @@ body {
 
 .recentbooks {
     margin-bottom: 20px;
-    font-size: 20px;
+    font-size: 15px;
     padding-left: 30px; 
     padding-right: 30px;
 }
@@ -65,7 +77,7 @@ body {
 
 .booktitle {
     margin-bottom: 15px;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .bookdesc {
@@ -76,18 +88,23 @@ body {
     font-weight: bold;
 }
 
-.catdetail {
+.added {
+    margin-bottom: 15px;
+}
+
+.catdetail, .yourfavs, .faveadded, .regs{
     padding-left: 30px; 
     padding-right: 30px;
+    padding-top: 15px;
 }
 
 .catname {
-    font-size: 20px;
+    font-size: 15px;
     margin-bottom: 15px;
 }
 
 .bookhead {
-    font-size: 20px;
+    font-size: 15px;
     margin-bottom: 15px;
 }
 
@@ -95,3 +112,13 @@ body {
     display: flex;
     justify-content: space-between;
 }
+
+.nav_name {
+    padding-right: 50px;
+    padding-top: 5px;
+}
+
+.nav_links {
+    padding-top: 12px;
+}
+
